@@ -2,6 +2,7 @@ master:
 
 * Improvement: Better handling of the content-disposition header. Now supports file name that is either
   enclosed or not in double quotes and is case insensitive as per RC6266 grammar
+* Improvement: Files without an extension will now be checked for spoofing attempts
 
 6.0.0 (2018-03-09):
 
